--- a/feature/place/src/main/res/values/strings.xml
+++ b/feature/place/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="description_cd">Description</string>
     <string name="delete_place_cd">Delete place</string>
     <string name="edit_place_cd">Edit place</string>
+    <string name="take_a_photo_cd">Take a photo</string>
+    <string name="take_image_from_gallery_cd">Take image from gallery</string>
 </resources>
