--- a/core/ui/src/main/res/values-ru/strings.xml
+++ b/core/ui/src/main/res/values-ru/strings.xml
@@ -3,4 +3,5 @@
     <string name="permission_required">Требуется разрешение</string>
     <string name="open_settings">Открыть настройки</string>
     <string name="cancel">Отмена</string>
+    <string name="no_places_placeholder">Нет созданных мест. Создай новое нажав \"+\"</string>
 </resources>
