Changed title and description hint text (description optional)

--- a/feature/place/src/main/res/values-ru/strings.xml
+++ b/feature/place/src/main/res/values-ru/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="back_cd">Назад</string>
     <string name="share_place_cd">Поделиться местом</string>
-    <string name="title_optional_cd">Заголовок (необязательно)</string>
-    <string name="description_cd">Описание</string>
+    <string name="title_cd">Заголовок</string>
+    <string name="description_cd">Описание (необязательно)</string>
     <string name="delete_place_cd">Удалить место</string>
     <string name="edit_place_cd">Редактировать место</string>
     <string name="take_a_photo_cd">Сделать фото</string>
