Navigating back when canceling place creation and fixed color of TransparentTextField hint at dark theme

--- a/feature/place/src/main/res/values/strings.xml
+++ b/feature/place/src/main/res/values/strings.xml
@@ -13,6 +13,6 @@
     <string name="invalid_position_exception">Position invalid</string>
     <string name="cancel_action">Cancel</string>
     <string name="save_action">Save</string>
-    <string name="editing_mode_label">Editing mode</string>
+    <string name="editing_mode_label">Changeable</string>
     <string name="no_images_label">No images</string>
 </resources>
