--- a/feature/place/src/main/res/values-ru/strings.xml
+++ b/feature/place/src/main/res/values-ru/strings.xml
@@ -13,6 +13,6 @@
     <string name="invalid_position_exception">Местоположение некорректно</string>
     <string name="cancel_action">Отмена</string>
     <string name="save_action">Сохранить</string>
-    <string name="editing_mode_label">Режим редактирования</string>
+    <string name="editing_mode_label">Изменяемый</string>
     <string name="no_images_label">Изображений нет</string>
 </resources>
