--- a/core/ui/src/main/res/values-ru/strings.xml
+++ b/core/ui/src/main/res/values-ru/strings.xml
@@ -4,4 +4,6 @@
     <string name="open_settings">Открыть настройки</string>
     <string name="cancel">Отмена</string>
     <string name="no_places_placeholder">Нет созданных мест. Создай новое нажав \"+\"</string>
+    <string name="follow_my_position_cd">Следовать моему местоположению</string>
+    <string name="track_location_unavailable">Следование местоположению недоступно</string>
 </resources>
