--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="no_places_placeholder">There not created places. Make new by clicking \"+\"</string>
     <string name="follow_my_position_cd">Follow my position</string>
     <string name="track_location_unavailable">Track location unavailable</string>
+    <string name="delete_place_text">Do you really want to delete place: %1$s?</string>
+    <string name="delete_place_title">Confirm deletion</string>
 </resources>
