--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="track_location_unavailable">Track location unavailable</string>
     <string name="delete_place_text">Do you really want to delete place: %1$s?</string>
     <string name="delete_place_title">Confirm deletion</string>
+    <string name="cancel_editing_action">Cancel</string>
+    <string name="stay_here_action">Stay here</string>
+    <string name="cancel_editing_title">Cancel changes</string>
+    <string name="cancel_editing_text">All unsaved data will be lost. Cancel changes?</string>
 </resources>
